# File-Search-Tool

./: .gitignore  CHANGELOG.md  LICENSE  README.md  file_search_tool_docs.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
Schema/: README.md  cli-display-options.schema.json  content-match.schema.json  file-entry.schema.json  schema-index.json  search-options.schema.json  search-result.schema.json  search-results.schema.json  search-session.schema.json  search-stats.schema.json
docs/adr/: 0001-hand-written-recursion-over-os-walk.md  0002-generators-over-eager-lists.md  0003-pathlib-everywhere.md  0004-small-query-dsl-over-flags-only.md  0005-library-core-over-framework-first-design.md
examples/: queries.txt
file_search_tool/: __init__.py  __main__.py  cli.py  content.py  dateparse.py  diagnostics.py  errors.py  filters.py  matcher.py  models.py  options.py  search.py  sizeparse.py  traversal.py  utils.py
file_search_tool/dsl/: __init__.py  ast.py  lexer.py  parser.py  predicates.py  tokens.py
file_search_tool/formatters/: json.py  plain.py  tree.py
tests/: test_cli.py  test_cli_helpers.py  test_content_advanced.py  test_content_search.py  test_dateparse.py  test_diagnostics.py  test_dsl_lexer.py  test_dsl_parser.py  test_dsl_predicates.py  test_examples_queries.py  test_filters.py  test_filters_advanced.py  test_formatters.py  test_library_api.py  test_matcher.py  test_options.py  test_regressions.py  test_search_integration.py  test_search_unit.py  test_sizeparse.py  test_traversal.py  test_utils.py
