[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "file-search-tool"
version = "0.1.3"
description = "A pathlib-first recursive file search library and CLI."
readme = "README.md"
license = "MIT"
authors = [{ name = "Princeton Afeez", email = "princetonafeez@gmail.com" }]
requires-python = ">=3.11"
dependencies = []
keywords = ["filesystem", "search", "cli", "pathlib", "find", "grep"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/PrincetonAfeez/file-search-tool"
Repository = "https://github.com/PrincetonAfeez/file-search-tool"
Changelog = "https://github.com/PrincetonAfeez/file-search-tool/blob/main/CHANGELOG.md"
Issues = "https://github.com/PrincetonAfeez/file-search-tool/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.8", "mypy>=1.13"]

[project.scripts]
file-search = "file_search_tool.cli:main"

[tool.setuptools.packages.find]
include = ["file_search_tool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["file_search_tool"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 99

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["file_search_tool"]
